# payments-service

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
app/: auth.py  database.py  main.py  settings.py  webhooks.py
app/adapters/: stripe.py  truemoney.py
app/repositories/: donations.py
app/routes/: admin.py  promptpay.py  stripe.py  truemoney.py
app/usecases/: donations.py
